--- a/_config.yml
+++ b/_config.yml
@@ -13,21 +13,21 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Distributed Storage and Computation on Scale
+email: cheersyang@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is a tech blog to share knowledge on the designs of large scale computation and
+  distributed file system; and to discuss popular open source projects such as
+  HDFS, YARN, Flink, Spark in large production clusters.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: vvobubble
+github_username:  yangwwei
 
 # Build settings
 markdown: kramdown
-#theme: minima
-theme: jekyll-theme-dinky
+theme: minima
+#theme: jekyll-theme-dinky
 plugins:
   - jekyll-feed
 
