--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Distributed Storage and Computation on Scale
+title: Streamline ONE
 email: cheersyang@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is a tech blog to share knowledge on the designs of large scale computation and
