--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
-title: Streamline ONE
-author: Weiwei Yang
-email: cheersyang@hotmail.com
+title: Your awesome title
+author: GitHub User
+email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  This is a tech blog to share knowledge on the designs of large scale
-  computation and distributed file system; and to discuss popular open
-  source projects such as HDFS, YARN, Flink, Spark in large production
-  clusters.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 
-twitter_username: vvobubble
-github_username:  yangwwei
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
