--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Minimal theme
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+title: Streamline ONE
+description: Distributed system, HDFS, YARN, Flink
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
