Add some images

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,9 +1,9 @@
-- caption: Friday Theme on GitHub
-  href: https://github.com/sfreytag/friday-theme
+- caption: GitHub
+  href: https://github.com/yangwwei
   icon: entypo/github.svg
 
 - caption: Stack Overflow
-  href: https://stackoverflow.com
+  href: https://stackoverflow.com/users/716439/weiwei-yang
   icon: icons/stackoverflow.svg
 
 - caption: Facebook
