Some new updates

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ highlighter:      rouge
 excerpt_separator: <!--more-->
 
 # Config for your profile.
-title:            Streamline ONE  # Site title
+title:            Weiwei's Blog  # Site title
 name:             Weiwei Yang              # Your name
 avatar:           /theme/img/luoyun.jpg  # Path to an avatar image
 
