--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ excerpt_separator: <!--more-->
 # Config for your profile.
 title:            Weiwei's Blog  # Site title
 name:             Weiwei Yang              # Your name
-avatar:           /theme/img/luoyun.jpg  # Path to an avatar image
+avatar:           /theme/img/hadoopwaterwaves.jpg  # Path to an avatar image
 
 # The theme uses the baseurl throughout, which is useful for running the entire
 # site under a subdir, like for this GitHub Pages deployment as a project site.
