--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ defaults:
     scope:
       path: ""
     values:
-      show_profile: false
+      show_profile: true
   -
     scope:
       path: "_posts"
